--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,10 @@
 <resources>
     <string name="app_name">encounter-generator</string>
     <string name="action_settings">Settings</string>
+
+    <string name="title_activity_encounter_parameters">EncounterParametersActivity</string>
+    <string name="go_to_build_encounter">Build Encounter</string>
+    <string name="feeling_lucky">I\'m Feeling Lucky</string>
+    <string name="dummy_content">DUMMY\nCONTENT</string>
+    <string name="title_activity_encounter_display">EncounterDisplayActivity</string>
 </resources>
